--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -1,7 +1,8 @@
 [
   {
     "id": "pilot-bend-drive",
-    "title": "Paver Driveway – Pilot Butte",
+    "category": "Paver Installations",
+    "title": "Permeable Driveway Rebuild",
     "tags": ["Pavers", "Driveways"],
     "thumb": "assets/img/projects/1.3.jpeg",
     "images": [
@@ -21,8 +22,31 @@
     }
   },
   {
+    "id": "shevlin-paver-courtyard",
+    "category": "Paver Installations",
+    "title": "Courtyard Paver Patio",
+    "tags": ["Pavers", "Patios", "Outdoor Living"],
+    "thumb": "assets/img/projects/6pave.heic",
+    "placeholder": "assets/img/projects/1.3.jpeg",
+    "images": [
+      "assets/img/projects/1pave.heic",
+      "assets/img/projects/2pave.heic",
+      "assets/img/projects/3pave.heic",
+      "assets/img/projects/4pave.heic",
+      "assets/img/projects/5pave.heic",
+      "assets/img/projects/6pave.heic",
+      "assets/img/projects/7pave.heic"
+    ],
+    "beforeAfter": {
+      "before": "assets/img/projects/1pave.heic",
+      "after": "assets/img/projects/7pave.heic"
+    },
+    "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+  },
+  {
     "id": "deschutes-steps",
-    "title": "Terraced Steps – Deschutes River Trail",
+    "category": "Retaining Walls & Steps",
+    "title": "Terraced Step System",
     "tags": ["Steps", "Masonry", "Retaining Walls"],
     "thumb": "assets/img/projects/2.7.jpeg",
     "images": [
@@ -41,5 +65,45 @@
       "after": "assets/img/projects/2.7.jpeg"
     },
     "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+  },
+  {
+    "id": "high-desert-retaining-wall",
+    "category": "Retaining Walls & Steps",
+    "title": "Tiered Block Retaining Wall",
+    "tags": ["Retaining Walls", "Steps", "Drainage"],
+    "thumb": "assets/img/projects/6retain.heic",
+    "placeholder": "assets/img/projects/2.7.jpeg",
+    "images": [
+      "assets/img/projects/1retain.heic",
+      "assets/img/projects/2retain.heic",
+      "assets/img/projects/3retain.heic",
+      "assets/img/projects/4retain.heic",
+      "assets/img/projects/5retain.heic",
+      "assets/img/projects/6retain.heic"
+    ],
+    "beforeAfter": {
+      "before": "assets/img/projects/1retain.heic",
+      "after": "assets/img/projects/6retain.heic"
+    },
+    "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+  },
+  {
+    "id": "bend-backyard-refresh",
+    "category": "Yard & Turf Installs",
+    "title": "Backyard Lawn & Stone Border",
+    "tags": ["Landscaping", "Lawns", "Stonework"],
+    "thumb": "assets/img/projects/4yard.heic",
+    "placeholder": "assets/img/projects/2.6.jpeg",
+    "images": [
+      "assets/img/projects/1yard.heic",
+      "assets/img/projects/2yard.heic",
+      "assets/img/projects/3yard.heic",
+      "assets/img/projects/4yard.heic"
+    ],
+    "beforeAfter": {
+      "before": "assets/img/projects/1yard.heic",
+      "after": "assets/img/projects/4yard.heic"
+    },
+    "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
   }
 ]
