--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -1,17 +1,18 @@
 [
   {
     "id": "pilot-bend-drive",
-    "title": "Paver Driveway – Pilot Butte",
+    "category": "Paver Installations",
+    "title": "Permeable Driveway Rebuild",
     "tags": ["Pavers", "Driveways"],
-    "thumb": "assets/img/projects/1.3.jpeg",
+    "thumb": { "src": "assets/img/projects/1.3.jpeg" },
     "images": [
-      "assets/img/projects/1.1.jpeg",
-      "assets/img/projects/1.2.jpeg",
-      "assets/img/projects/1.3.jpeg"
+      { "src": "assets/img/projects/1.1.jpeg" },
+      { "src": "assets/img/projects/1.2.jpeg" },
+      { "src": "assets/img/projects/1.3.jpeg" }
     ],
     "beforeAfter": {
-      "before": "assets/img/projects/1.1.jpeg",
-      "after": "assets/img/projects/1.3.jpeg"
+      "before": { "src": "assets/img/projects/1.1.jpeg" },
+      "after": { "src": "assets/img/projects/1.3.jpeg" }
     },
     "summary": "Permeable pavers over engineered base for winter durability.",
     "meta": {
@@ -21,25 +22,100 @@
     }
   },
   {
-    "id": "deschutes-steps",
-    "title": "Terraced Steps – Deschutes River Trail",
-    "tags": ["Steps", "Masonry", "Retaining Walls"],
-    "thumb": "assets/img/projects/2.7.jpeg",
+    "id": "shevlin-paver-courtyard",
+    "category": "Paver Installations",
+    "title": "Courtyard Paver Patio",
+    "tags": ["Pavers", "Patios", "Outdoor Living"],
+    "thumb": {
+      "src": "assets/img/projects/6pave.jpeg",
+      "fallback": "assets/img/projects/6pave.heic",
+      "placeholder": "assets/img/projects/1.3.jpeg"
+    },
+    "placeholder": "assets/img/projects/1.3.jpeg",
     "images": [
-      "assets/img/projects/2.1.jpeg",
-      "assets/img/projects/2.2.jpeg",
-      "assets/img/projects/2.3.jpeg",
-      "assets/img/projects/2.4.jpeg",
-      "assets/img/projects/2.4.5.jpeg",
-      "assets/img/projects/2.6.jpeg",
-      "assets/img/projects/2.7.jpeg",
+      { "src": "assets/img/projects/1pave.jpeg", "fallback": "assets/img/projects/1pave.heic" },
+      { "src": "assets/img/projects/2pave.jpeg", "fallback": "assets/img/projects/2pave.heic" },
+      { "src": "assets/img/projects/3pave.jpeg", "fallback": "assets/img/projects/3pave.heic" },
+      { "src": "assets/img/projects/4pave.jpeg", "fallback": "assets/img/projects/4pave.heic" },
+      { "src": "assets/img/projects/5pave.jpeg", "fallback": "assets/img/projects/5pave.heic" },
+      { "src": "assets/img/projects/6pave.jpeg", "fallback": "assets/img/projects/6pave.heic" },
+      { "src": "assets/img/projects/7pave.jpeg", "fallback": "assets/img/projects/7pave.heic" }
+    ],
+    "beforeAfter": {
+      "before": { "src": "assets/img/projects/1pave.jpeg", "fallback": "assets/img/projects/1pave.heic" },
+      "after": { "src": "assets/img/projects/7pave.jpeg", "fallback": "assets/img/projects/7pave.heic" }
+    },
+    "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+  },
+  {
+    "id": "deschutes-steps",
+    "category": "Retaining Walls & Steps",
+    "title": "Terraced Step System",
+    "tags": ["Steps", "Masonry", "Retaining Walls"],
+    "thumb": { "src": "assets/img/projects/2.7.jpeg" },
+    "images": [
+      { "src": "assets/img/projects/2.1.jpeg" },
+      { "src": "assets/img/projects/2.2.jpeg" },
+      { "src": "assets/img/projects/2.3.jpeg" },
+      { "src": "assets/img/projects/2.4.jpeg" },
+      { "src": "assets/img/projects/2.4.5.jpeg" },
+      { "src": "assets/img/projects/2.6.jpeg" },
+      { "src": "assets/img/projects/2.7.jpeg" },
       "assets/img/projects/2.5.mp4",
       "assets/img/projects/2.8.mp4"
     ],
     "beforeAfter": {
-      "before": "assets/img/projects/2.1.jpeg",
-      "after": "assets/img/projects/2.7.jpeg"
+      "before": { "src": "assets/img/projects/2.1.jpeg" },
+      "after": { "src": "assets/img/projects/2.7.jpeg" }
     },
     "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+  },
+  {
+    "id": "high-desert-retaining-wall",
+    "category": "Retaining Walls & Steps",
+    "title": "Tiered Block Retaining Wall",
+    "tags": ["Retaining Walls", "Steps", "Drainage"],
+    "thumb": {
+      "src": "assets/img/projects/6retain.jpeg",
+      "fallback": "assets/img/projects/6retain.heic",
+      "placeholder": "assets/img/projects/2.7.jpeg"
+    },
+    "placeholder": "assets/img/projects/2.7.jpeg",
+    "images": [
+      { "src": "assets/img/projects/1retain.jpeg", "fallback": "assets/img/projects/1retain.heic" },
+      { "src": "assets/img/projects/2retain.jpeg", "fallback": "assets/img/projects/2retain.heic" },
+      { "src": "assets/img/projects/3retain.jpeg", "fallback": "assets/img/projects/3retain.heic" },
+      { "src": "assets/img/projects/4retain.jpeg", "fallback": "assets/img/projects/4retain.heic" },
+      { "src": "assets/img/projects/5retain.jpeg", "fallback": "assets/img/projects/5retain.heic" },
+      { "src": "assets/img/projects/6retain.jpeg", "fallback": "assets/img/projects/6retain.heic" }
+    ],
+    "beforeAfter": {
+      "before": { "src": "assets/img/projects/1retain.jpeg", "fallback": "assets/img/projects/1retain.heic" },
+      "after": { "src": "assets/img/projects/6retain.jpeg", "fallback": "assets/img/projects/6retain.heic" }
+    },
+    "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+  },
+  {
+    "id": "bend-backyard-refresh",
+    "category": "Yard & Turf Installs",
+    "title": "Backyard Lawn & Stone Border",
+    "tags": ["Landscaping", "Lawns", "Stonework"],
+    "thumb": {
+      "src": "assets/img/projects/4yard.jpeg",
+      "fallback": "assets/img/projects/4yard.heic",
+      "placeholder": "assets/img/projects/2.6.jpeg"
+    },
+    "placeholder": "assets/img/projects/2.6.jpeg",
+    "images": [
+      { "src": "assets/img/projects/1yard.jpeg", "fallback": "assets/img/projects/1yard.heic" },
+      { "src": "assets/img/projects/2yard.jpeg", "fallback": "assets/img/projects/2yard.heic" },
+      { "src": "assets/img/projects/3yard.jpeg", "fallback": "assets/img/projects/3yard.heic" },
+      { "src": "assets/img/projects/4yard.jpeg", "fallback": "assets/img/projects/4yard.heic" }
+    ],
+    "beforeAfter": {
+      "before": { "src": "assets/img/projects/1yard.jpeg", "fallback": "assets/img/projects/1yard.heic" },
+      "after": { "src": "assets/img/projects/4yard.jpeg", "fallback": "assets/img/projects/4yard.heic" }
+    },
+    "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
   }
 ]
