--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -1,45 +1,218 @@
 [
   {
     "id": "pilot-bend-drive",
-    "title": "Paver Driveway – Pilot Butte",
-    "tags": ["Pavers", "Driveways"],
-    "thumb": "assets/img/projects/1.3.jpeg",
+    "category": "Paver Installations",
+    "title": "Permeable Driveway Rebuild",
+    "tags": [
+      "Pavers",
+      "Driveways"
+    ],
+    "thumb": {
+      "src": "assets/img/projects/1.3.jpeg"
+    },
     "images": [
-      "assets/img/projects/1.1.jpeg",
-      "assets/img/projects/1.2.jpeg",
-      "assets/img/projects/1.3.jpeg"
+      {
+        "src": "assets/img/projects/1.1.jpeg"
+      },
+      {
+        "src": "assets/img/projects/1.2.jpeg"
+      },
+      {
+        "src": "assets/img/projects/1.3.jpeg"
+      }
     ],
     "beforeAfter": {
-      "before": "assets/img/projects/1.1.jpeg",
-      "after": "assets/img/projects/1.3.jpeg"
+      "before": {
+        "src": "assets/img/projects/1.1.jpeg"
+      },
+      "after": {
+        "src": "assets/img/projects/1.3.jpeg"
+      }
     },
     "summary": "Permeable pavers over engineered base for winter durability.",
     "meta": {
       "sqft": 900,
-      "materials": ["permeable paver", "polymeric sand"],
+      "materials": [
+        "permeable paver",
+        "polymeric sand"
+      ],
       "completed": "2025-09"
     }
   },
   {
-    "id": "deschutes-steps",
-    "title": "Terraced Steps – Deschutes River Trail",
-    "tags": ["Steps", "Masonry", "Retaining Walls"],
-    "thumb": "assets/img/projects/2.7.jpeg",
+    "id": "shevlin-paver-courtyard",
+    "category": "Paver Installations",
+    "title": "Courtyard Paver Patio",
+    "tags": [
+      "Pavers",
+      "Patios",
+      "Outdoor Living"
+    ],
+    "thumb": {
+      "src": "assets/img/projects/6pave.jpeg",
+      "placeholder": "assets/img/projects/1.3.jpeg"
+    },
+    "placeholder": "assets/img/projects/1.3.jpeg",
     "images": [
-      "assets/img/projects/2.1.jpeg",
-      "assets/img/projects/2.2.jpeg",
-      "assets/img/projects/2.3.jpeg",
-      "assets/img/projects/2.4.jpeg",
-      "assets/img/projects/2.4.5.jpeg",
-      "assets/img/projects/2.6.jpeg",
-      "assets/img/projects/2.7.jpeg",
+      {
+        "src": "assets/img/projects/1pave.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2pave.jpeg"
+      },
+      {
+        "src": "assets/img/projects/3pave.jpeg"
+      },
+      {
+        "src": "assets/img/projects/4pave.jpeg"
+      },
+      {
+        "src": "assets/img/projects/5pave.jpeg"
+      },
+      {
+        "src": "assets/img/projects/6pave.jpeg"
+      },
+      {
+        "src": "assets/img/projects/7pave.jpeg"
+      }
+    ],
+    "beforeAfter": {
+      "before": {
+        "src": "assets/img/projects/1pave.jpeg"
+      },
+      "after": {
+        "src": "assets/img/projects/7pave.jpeg"
+      }
+    },
+    "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+  },
+  {
+    "id": "deschutes-steps",
+    "category": "Retaining Walls & Steps",
+    "title": "Terraced Step System",
+    "tags": [
+      "Steps",
+      "Masonry",
+      "Retaining Walls"
+    ],
+    "thumb": {
+      "src": "assets/img/projects/2.7.jpeg"
+    },
+    "images": [
+      {
+        "src": "assets/img/projects/2.1.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2.2.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2.3.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2.4.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2.4.5.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2.6.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2.7.jpeg"
+      },
       "assets/img/projects/2.5.mp4",
       "assets/img/projects/2.8.mp4"
     ],
     "beforeAfter": {
-      "before": "assets/img/projects/2.1.jpeg",
-      "after": "assets/img/projects/2.7.jpeg"
+      "before": {
+        "src": "assets/img/projects/2.1.jpeg"
+      },
+      "after": {
+        "src": "assets/img/projects/2.7.jpeg"
+      }
     },
     "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+  },
+  {
+    "id": "high-desert-retaining-wall",
+    "category": "Retaining Walls & Steps",
+    "title": "Tiered Block Retaining Wall",
+    "tags": [
+      "Retaining Walls",
+      "Steps",
+      "Drainage"
+    ],
+    "thumb": {
+      "src": "assets/img/projects/6retain.jpeg",
+      "placeholder": "assets/img/projects/2.7.jpeg"
+    },
+    "placeholder": "assets/img/projects/2.7.jpeg",
+    "images": [
+      {
+        "src": "assets/img/projects/1retain.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2retain.jpeg"
+      },
+      {
+        "src": "assets/img/projects/3retain.jpeg"
+      },
+      {
+        "src": "assets/img/projects/4retain.jpeg"
+      },
+      {
+        "src": "assets/img/projects/5retain.jpeg"
+      },
+      {
+        "src": "assets/img/projects/6retain.jpeg"
+      }
+    ],
+    "beforeAfter": {
+      "before": {
+        "src": "assets/img/projects/1retain.jpeg"
+      },
+      "after": {
+        "src": "assets/img/projects/6retain.jpeg"
+      }
+    },
+    "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+  },
+  {
+    "id": "bend-backyard-refresh",
+    "category": "Yard & Turf Installs",
+    "title": "Backyard Lawn & Stone Border",
+    "tags": [
+      "Landscaping",
+      "Lawns",
+      "Stonework"
+    ],
+    "thumb": {
+      "src": "assets/img/projects/4yard.jpeg",
+      "placeholder": "assets/img/projects/2.6.jpeg"
+    },
+    "placeholder": "assets/img/projects/2.6.jpeg",
+    "images": [
+      {
+        "src": "assets/img/projects/1yard.jpeg"
+      },
+      {
+        "src": "assets/img/projects/2yard.jpeg"
+      },
+      {
+        "src": "assets/img/projects/3yard.jpeg"
+      },
+      {
+        "src": "assets/img/projects/4yard.jpeg"
+      }
+    ],
+    "beforeAfter": {
+      "before": {
+        "src": "assets/img/projects/1yard.jpeg"
+      },
+      "after": {
+        "src": "assets/img/projects/4yard.jpeg"
+      }
+    },
+    "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
   }
 ]
